--- a/static/html/compte.html
+++ b/static/html/compte.html
@@ -28,7 +28,7 @@
                     <br>
                     <br>
                 </div>
-                <div id="connecter">
+                <div id="connecterm">
                     Mot de passe:<input type="password" name="password">
                     <br>
                     <br>
